adicionando evento no botão cancelar ao ser clicado

--- a/frontend/app/billingCycle/form.html
+++ b/frontend/app/billingCycle/form.html
@@ -12,6 +12,6 @@
             ng-if="bcCtrl.tabCreate">Incluir</button>
         <button class="btn btn-info" ng-if="bcCtrl.tabUpdate">Alterar</button>
         <button class="btn btn-danger" ng-if="bcCtrl.tabDelete">Excluir</button>
-        <button class="btn btn-default">Cancelar</button>
+        <button class="btn btn-default" ng-click="bcCtrl.refresh()">Cancelar</button>
     </div>
 </div>
