--- a/frontend/app/billingCycle/list.html
+++ b/frontend/app/billingCycle/list.html
@@ -10,9 +10,9 @@
         </thead>
         <tbody>
             <tr ng-repeat="billingCycle in bcCtrl.billingCycles.data">
-                <td>{{ billingCycle.name }}</td>
-                <td>{{ billingCycle.month }}</td>
-                <td>{{ billingCycle.year }}</td>
+                <td>{{:: billingCycle.name }}</td>
+                <td>{{:: billingCycle.month }}</td>
+                <td>{{:: billingCycle.year }}</td>
                 <td class="table-actions">
                     <button class="btn btn-warning" ng-click="bcCtrl.showTabUpdate(billingCycle)">
                         <i class="fa fa-pencil"></i>
@@ -24,4 +24,8 @@
             </tr>
         </tbody>
     </table>
+    <div class="box-footer clearfix">
+        {{bcCtrl.pages}}
+        <paginator url="/#/billingCycles" pages="{{ bcCtrl.pages }}"></paginator>
+    </div>
 </div>
