--- a/frontend/app/billingCycle/list.html
+++ b/frontend/app/billingCycle/list.html
@@ -25,7 +25,6 @@
         </tbody>
     </table>
     <div class="box-footer clearfix">
-        {{bcCtrl.pages}}
-        <paginator url="/#/billingCycles" pages="{{ bcCtrl.pages }}"></paginator>
+        <paginator url="/#!/billingCycles" pages="{{ bcCtrl.pages }}"></paginator>
     </div>
 </div>
